--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,12 @@
 .App {
   margin: 0;
   padding: 0;
+  padding-left: 12%;
+  padding-right: 12%;
+}
+
+.content-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
