--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,3 +1,6 @@
-.carousel {
-  width: 70%;
+.home-container {
+  background-color: bisque;
+  width: 100%;
+  height: 100vh;
+  text-align: center;
 }
