--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,29 +1,3 @@
-.nav-container {
-  background-color: #006600;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.logo {
-  margin-left: 2rem;
-  width: 200px;
-  height: 80px;
-}
-
-.nav-links {
-  width: 30%;
-  display: flex;
-  justify-content: space-around;
-}
-
-.nav-link {
-  text-decoration: none;
-  font-size: 20px;
-  font-weight: bold;
-  color: black;
-}
-
-.nav-link:hover {
-  color: whitesmoke;
+.brand-logo {
+  margin-left: 1rem;
 }
