--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -4,7 +4,8 @@
   justify-content: center;
   flex-direction: column;
   margin-top: 1rem;
-  width: 80%;
+  width: 100%;
+  height: 100vh;
 }
 
 .about-logo {
