--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,3 +1,17 @@
-.brand-logo {
-  margin-left: 1rem;
+.nav-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.nav-logo {
+  width: 4rem;
+  height: 4rem;
+  margin: 1rem;
+}
+
+.nav-links {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
