--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -4,3 +4,42 @@
   height: 100vh;
   text-align: center;
 }
+
+@media only screen and (max-width: 600px) {
+  .maps  
+  {
+  width: 300px;
+  height: 300px;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  .maps  
+  {
+  width: 450px;
+  height: 450px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .maps 
+  {
+  width: 550px;
+  height: 550px;
+  }
+} 
+
+@media only screen and (min-width: 992px) {
+  .maps 
+  {
+  width: 750px;
+  height: 750px;
+  }
+} 
+
+/* @media only screen and (min-width: 1200px) {
+  .maps
+  {
+  
+  }
+} */
