--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -3,8 +3,56 @@
   width: 100%;
   height: 100vh;
   text-align: center;
+  /* display: flex;
+  justify-content: center; */
 }
+
 .carousel-img {
   width: 100%;
-  height: 590px;
+  height: 750px;
 }
+
+/* .carousel{
+  width: 700px;
+  height: 700px;
+} */
+
+/* 
+@media only screen and (max-width: 600px) {
+  .carousel-img  
+  {
+  width: 300px;
+  height: 300px;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  .carousel-img  
+  {
+  width: 450px;
+  height: 450px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .carousel-img 
+  {
+  width: 550px;
+  height: 550px;
+  }
+} 
+
+@media only screen and (min-width: 992px) {
+  .carousel-img 
+  {
+  width: 700px;
+  height: 700px;
+  }
+} 
+
+@media only screen and (min-width: 1200px) {
+  .carousel-img
+  {
+  
+  }
+} */
