--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -1,8 +1,71 @@
 .contact-container {
-  background-color: bisque;
+  background-color: #ffe1a8;
   width: 100%;
   height: 100vh;
   text-align: center;
+}
+
+.contact-wrapper {
+  width: 90%;
+  padding: 1rem;
+  margin: 1rem auto;
+  border: 4px solid #188853;
+  border-radius: 25px;
+}
+
+.name-group{
+  display:flex;
+  flex-flow: row;
+  justify-content: space-evenly;
+}
+
+.name-input-size{
+  width: 35%;
+  border: none;
+  text-align: center;
+  border-radius: 5px;
+}
+
+.category-message-group{
+  margin: 1rem;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+
+.category-group{
+  margin: 1rem;
+  padding: .25rem;
+  width: 50%;
+  border: none;
+  text-align: center;
+  border-radius: 5px;
+}
+
+.message-group{
+  width: 100%;
+  margin: 1rem;
+  border: none;
+  border-radius: 5px;
+}
+
+.contact-button {
+  padding: 9px 25px;
+  background-color: #188853;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+  /* color: white; */
+}
+.contact-button:hover {
+  background-color: #f5f410;
+  /* color: black; */
+}
+
+.contact-text {
+  color: #188853;
+  font-weight: bold;
 }
 
 /* @media only screen and (max-width: 600px) {
