--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -5,6 +5,14 @@
   flex-direction: column;
   width: 100%;
   height: 100vh;
+  background-color: rgb(242, 250, 199);
+  border-radius: 5px;
+  margin: 0 0 1.5rem 0;
+  transition: transform 0.3s;
+}
+
+.about-container:hover {
+  transform: scale(1.005);
 }
 
 .about-logo {
