--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -1,48 +1,57 @@
 .contact-container {
-  background-color: #ffe1a8;
+  background-color: rgb(242, 250, 199);
   width: 100%;
-  height: 100vh;
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 5px;
+  margin: 0 0 1.5rem 0;
+  transition: transform 0.3s;
+}
+
+.contact-container:hover {
+  transform: scale(1.005);
 }
 
 .contact-wrapper {
-  width: 90%;
+  width: 80%;
   padding: 1rem;
   margin: 1rem auto;
-  border: 4px solid #188853;
-  border-radius: 25px;
+  border: 1px solid black;
+  border-radius: 5px;
+  text-align: center;
 }
 
-.name-group{
-  display:flex;
+.name-group {
+  display: flex;
   flex-flow: row;
   justify-content: space-evenly;
 }
 
-.name-input-size{
+.name-input-size {
   width: 35%;
   border: none;
   text-align: center;
   border-radius: 5px;
 }
 
-.category-message-group{
+.category-message-group {
   margin: 1rem;
   display: flex;
   flex-flow: column;
   align-items: center;
 }
 
-.category-group{
+.category-group {
   margin: 1rem;
-  padding: .25rem;
+  padding: 0.25rem;
   width: 50%;
   border: none;
   text-align: center;
   border-radius: 5px;
 }
 
-.message-group{
+.message-group {
   width: 100%;
   margin: 1rem;
   border: none;
@@ -55,17 +64,28 @@
   border: none;
   border-radius: 50px;
   cursor: pointer;
-  transition: all 0.3s ease 0s;
-  /* color: white; */
+  transition: all 0.2s ease 0s;
+  color: white;
 }
 .contact-button:hover {
   background-color: #f5f410;
-  /* color: black; */
+  color: black;
 }
 
 .contact-text {
-  color: #188853;
   font-weight: bold;
+}
+
+.contact-details {
+  text-align: center;
+}
+
+.contact-details p {
+  margin: 0;
+}
+
+.maps {
+  border-radius: 5px;
 }
 
 /* @media only screen and (max-width: 600px) {
