--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,9 +1,12 @@
 .home-container {
+  margin: 0 0 1.5rem 0;
   width: 100%;
   text-align: center;
+  border-radius: 5px;
 }
 
 .carousel-img {
   width: 100%;
-  /* height: 750px; */
+  height: 750px;
+  border-radius: 5px;
 }
