--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -2,6 +2,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: sticky;
+  top:0;
+  z-index: 1;
+  background: #198853;
 }
 
 .nav-logo {
@@ -25,6 +29,7 @@
   cursor: pointer;
   transition: all 0.3s ease 0s;
   color: white;
+  text-decoration: none;
 }
 .link:hover {
   background-color: #f5f410;
