--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   width: 100%;
   height: 100vh;
-  background-color: rgb(242, 250, 199);
+  background-color: #fdffb6;
   border-radius: 5px;
   margin: 0 0 1.5rem 0;
   transition: transform 0.3s;
