--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -1,5 +1,5 @@
 .contact-container {
-  background-color: rgb(242, 250, 199);
+  background-color: #fdffb6;
   width: 100%;
   display: flex;
   flex-direction: column;
